--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,18 @@
     margin: 0;
     padding: 0;
     font-family: 'Inter', sans-serif;
+    color: #0f172a;
+}
+
+body {
+    font-size: 0.9rem;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+button {
+    cursor: pointer;
 }
 
 .google-header {
@@ -23,6 +35,35 @@ header {
     gap: 1rem;
 }
 
+.text-link, footer a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.text-link:hover, footer a:hover {
+    text-decoration: underline;
+}
+
+.nav-container-second .text-link {
+    display: block;
+}
+
+.icon-link {
+    font-size: 1rem;
+    color: inherit; 
+    width: 30px;
+    aspect-ratio: 1/1;
+    overflow: hidden;
+    border-radius: 100%;
+    display: grid;
+    place-items: center;
+    text-decoration: none;
+}
+
+.icon-link:hover {
+    background: rgb(235,235,235);
+}
+
 .img-button {
     border: none;
     background: transparent;
@@ -33,4 +74,126 @@ header {
     aspect-ratio: 1/1;
     overflow: hidden;
     border-radius: 100%;
+}
+
+main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    padding: 4rem 1rem;
+}
+
+.title-text {
+    font-size: 3rem;
+}
+
+.input-bar {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+    max-width: 500px;
+    border: 1px solid rgb(235,235,235);
+    padding: 1rem;
+    border-radius: 1rem;
+}
+
+.input-bar:hover, input-bar:focus-within, .button-grid button:hover {
+    box-shadow: 0 0 4px 1px rgb(237,237,237);
+}
+
+.input-bar input {
+    flex: 1;
+    border: none;
+    outline: none;
+    width: 100%;
+}
+
+.input-bar div {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.input-icon {
+    background: transparent;
+    border: none;
+}
+
+.input-icon:hover {
+    opacity: 0.6;
+}
+
+.button-grid {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.button-grid button{
+    padding: 0.5rem 1rem;
+    border: 1px solid transparent;
+    background: rgb(247,247,247);
+    border-radius: 0.25rem;
+}
+
+.button-grid button:hover {
+    border: 1px solid slategray;
+}
+
+.language-text {
+    font-size: 0.7rem;
+}
+
+.language-link {
+    color: blue;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 0.7rem;
+}
+
+.language-link:hover {
+    text-decoration: underline;
+}
+
+footer {
+    background: rgb(244,244,244);
+    font-size: 0.7rem;
+}
+
+footer > div {
+    padding: 1rem;
+}
+
+.footer-grid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    gap: 2rem;
+}
+
+.footer-links {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+@media (min-width: 640px) {
+    footer {
+        background: rgb(244,244,244);
+        font-size: 0.7rem;
+    }
+    .footer-grid {
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+    }
+    .nav-container-second .text-link {
+    display: block;
+    }
+
 }
